# sales_network

./: .env.sample  README.md  data.json  pyproject.toml
config/: settings.py  urls.py
sales/: admin.py  models.py  serializers.py  urls.py  views.py
sales/migrations/: 0001_initial.py  0002_alter_contacts_options_alter_factory_options_and_more.py  0003_alter_factory_name_alter_ie_name_alter_retail_name.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: email_confirmation_failed.html  email_confirmation_sent.html  email_confirmed.html  login.html  password_confirmation_failed.html  password_confirmed.html  password_reset.html  register.html  user_form.html
users/templates/users/email/: new_password_mail.html  new_password_subject_mail.txt
